/*
 * Specification for DAQ internal state mechanisms.
 */
syntax = "proto3";


/**
 * Top-level runner state.
 */
message RunnerState {
  message PortInfo {
    bool active = 1;
    float flapping_start = 2;
    string mac = 3;
  }
}
